<resources>
    <string name="app_name">考伴</string>
    <string name="action_settings">settings</string>
    <string name="tab_dynamic_get">动态</string>
    <string name="tab_message">消息</string>
    <string name="tab_exam">考试</string>
    <string name="tab_me">我的</string>
    <string name="add_exam">添加考试</string>
    <string name="login_text">登陆</string>
    <string name="register_text">注册</string>
    <string name="username_email">邮箱</string>
    <string name="username_email_register">手机号码</string>
    <string name="yanzheng_text">验证码</string>
    <string name="get_yanzheng">获取验证码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_get">密码</string>
    <string name="password_get_4_word">密\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020码</string>
    <string name="exit_text">退出</string>
    <string name="dynamic_text">这个是动态页面</string>
    <string name="exam_text">这个是考试页面</string>
    <string name="message_text">这个是消息页面</string>
    <string name="me_text">这个是个人信息页面</string>
    <string name="title_activity_welcome">考伴</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="faxian">发现</string>
    <string name="message">消息</string>
    <string name="title">意见反馈</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="edit_hint">写评论...</string>
    <string name="changepwd">修改密码</string>
    <string name="oldpwd">旧密码</string>
    <string name="newpwd">新密码</string>
    <string name="againpwd">确认新密码</string>
    <string name="again">确\u0020\u0020\u0020\u0020认</string>
    <string name="dynamic">动态</string>
    <string name="selfmes">个人中心</string>
    <string name="exam">考试</string>
    <string name="more">更多</string>
    <string name="loading">正在加载...</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="mes_mes">消息</string>
    <string name="mes_friend">联系人</string>
    <string name="mes_add">添加好友</string>
    <string name="mes_add_hint">请输入考号</string>
    <string name="exam_exam">考试</string>
    <string name="exam_similar">相似的人</string>
    <string name="version">V1.0</string>
    <string name="about">软件简介:</string>
    <string name="about_mes">软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:软件简介:</string>
    <string name="qq">QQ:</string>
    <string name="mail">邮箱:</string>
    <string name="talk">私信</string>
    <string name="talk_send">发送</string>
    <string name="search">搜索</string>
    <string name="diploma">考证</string>
    <string name="highexam">考研</string>
    <string name="office">公务员</string>
    <string name="sure">确定</string>
    <string name="read_exam">查看考试</string>
    <string name="readexam_title">考试介绍\n\n最好用的软件</string>
    <string name="dynamic_all">全部</string>
    <string name="dynamic_new">最新</string>
    <string name="dynamic_best">精选</string>
    <string name="no_exam">快去添加考试吧</string>
    <string name="like">100</string>
    <string name="webview_text">阅读考试具体内容</string>
    <string name="popwindow">暂无信息</string>
    <string name="readexam_highschool">招生院校</string>
    <string name="exam_myexam">我的考试</string>
    <string name="guide">考试大纲</string>
    <string name="lctag">李超写的activity</string>
    <string name="pic">编辑图片</string>
    <string name="noresult">没有搜索到!!换个关键词试试</string>
    <string name="comment">评论</string>
    <string name="articalinfo">帖子详情</string>
    <string name="artical">发贴</string>
    <string name="comit">......</string>
    <string name="colon">:</string>
    <string name="no_data">没有找到符合条件的房源</string>
    <string name="publish_empty_text">想说点什么…</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_local">从相册中选取</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="grade">点击此处查分数</string>
    <string name="zkzh">准考证号</string>
    <string name="sfzh">身份证号</string>
    <string name="account">会计初级考试成绩查询</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_faxian_fragment">FaxianFragment</string>
    <string name="title_activity_atical_second">AticalSecondActivity</string>
    <string name="title_activity_topics_list">TopicsListActivity</string>
    <string name="title_activity_artical_list">ArticalListActivity</string>
    <string name="title_activity_add_content">AddContent</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_image_zoom">ImageZoom</string>
    <string name="title_activity_image_choose">ImageChoose</string>
    <string name="title_activity_image_bucket_choose">ImageBucketChoose</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_activity_edu">EduActivity</string>
    <string name="title_activity_school">SchoolActivity</string>
    <string name="title_activity_province">Province</string>
    <string name="title_activity_provance">ProvanceActivity</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_kao_ban_regisiter">KaoBanRegisiter</string>
    <string name="title_activity_kaoban_register">KaobanRegister</string>
    <string name="title_activity_demo_application">DemoApplication</string>
    <string name="title_activity_demo_hxsdkhelper">DemoHXSDKHelper</string>
    <string name="title_activity_hxsdkhelper">HXSDKHelper</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">[语音]</string>
    <string name="title_activity_video_call">VideoCallActivity</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="In_the_call">通话中...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="hanging_up">正在挂断..</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="title_activity_expression_adapter">ExpressionAdapter</string>
    <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="title_activity_alert_dialog">AlertDialog</string>
    <string name="prompt">提示</string>
    <string name="ok">确定</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="resend">重发</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete">删除</string>
    <string name="forward">转发</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="not_download">未下载:</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="robot_chat">环信小助手</string>
    <string name="title_activity_chatkaoban">Chatkaoban</string>
    <string name="title_activity_test_kaoban">TestKaoban</string>
    <string name="title_activity_chat_message">ChatMessage</string>
    <string name="title_activity_voice_call">VoiceCallActivity</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="title_activity_image_grid">ImageGridActivity</string>
    <string name="title_activity_image_grid_fragment">ImageGridFragment</string>
    <string name="title_activity_build_config">BuildConfig</string>
    <string name="title_activity_recorder_video">RecorderVideoActivity</string>
    <string name="recording_video">录制视频</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Video_footage">拍摄录像</string>
</resources>