<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/blue"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:text="@string/mes_add"/>

    <EditText
        android:id="@+id/edit_dialog_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLength="8"
        android:hint="@string/mes_add_hint"
        android:gravity="center"
        android:textColor="@color/blue"
        android:background="@drawable/edit_round"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button_dialog_add_yes"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="@color/back_white"
            android:background="@color/blue"/>

        <Button
            android:id="@+id/button_dialog_add_no"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/no"
            android:textColor="@color/back_white"
            android:background="@color/blue"/>

    </LinearLayout>

</LinearLayout>
