<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/back_white">

 <include layout="@layout/backxml"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/gray_normal"
        android:text="@string/account"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/gray_normal"
            android:text="@string/zkzh"/>

        <EditText
            android:id="@+id/edit_zkzh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:lines="1"
            android:numeric="integer"
            android:textColor="@color/gray_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/gray_normal"
            android:text="@string/sfzh"/>

        <EditText
            android:id="@+id/edit_sfzh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:numeric="integer"
            android:lines="1"
            android:textColor="@color/gray_normal" />

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="@color/whites"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/blue"
        android:text="@string/submit"/>

</LinearLayout>
